--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./scss/style.css" />
     <title>Kladr test task</title>
   </head>
   <body>
@@ -18,26 +17,6 @@
       />
     </form>
 
-    <script>
-      const queryInput = document.querySelector(".form__input");
-
-      function apiData(data) {
-        let cityArr = data.result;
-        let cities = "";
-        cityArr.map(function (city) {
-          cities += `<option>${city.name}</option>`;
-        });
-        queryInput.innerHTML = `<datalist class="form__input-data" id="city-list">${cities}</datalist>`;
-      }
-      queryInput.addEventListener("input", (e) => {
-        const query = e.target.value;
-        const src = `https://kladr-api.ru/api.php?contentType=city&limit=5&query=${query}&callback=apiData`;
-        document.body.append(
-          Object.assign(document.createElement("script"), {
-            src,
-          })
-        );
-      });
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
